# roll

./: CMakeLists.txt  README.md  apply_delta.cpp  delta_viewer.cpp
.github/workflows/: cmake.yml
src/: Apply.hpp  Delta.hpp  DeltaViewer.cpp  DeltaViewer.hpp  FileIO.cpp  FileIO.hpp  IHash.hpp  IRollingHash.hpp  RK_finger.hpp  Signature.hpp  blake.h  blake512.cpp  main.cpp  rh_config.h.in
tests/: Apply_tests.cpp  Blake_tests.cpp  FileIO_tests.cpp  RK_finger_tests.cpp  Signature_tests.cpp  main_tests.cpp  testfile
